v.2.0.7
- changed bannerplex to vertical scroll
- added extra row to bannerplexview
- fixed watched percentage wrong with MB3

v.2.0.6
- added extended view
- added bannerplex view
- added progress dialog
- fixed minor graphic glitches
- added plexbmc tile
- added method to add custom buttons to menu
- new method for sorting home tiles 
- added watched/unwatched icon in all views

v.2.0.1
- fixed issue with custom tile images for MB3 libraries
- added support for (optional) Lyrics in music
- cleaned up music views

v.1.9.9
- fixed several issues with dialogs and overlays
- improved banner views

v.1.9.8
- added setting to hide titles on home menu tiles
- changed some dialogs; buttons now in the dialog

v.1.9.7
- fixed some language strings
- added regular thumb as fallback for missing landscape banners
- changed used fonts to opensource variant
- changed modern theme as default, traditional to classic
- added series-record support for MediaPortal PVR

v.1.9.6
- Added tile for YouTube plugin
- Added custom Netflix submenu (direct access)
- Added Netflix mode for skin (use netflix as library)
- Quick Access menu now also available for regular library and netflix libraries
- Fixed small issues with fonts in PVR views
- Fixed Favorites tile
- Fixed NextUp items missing on quick access
- Added automatic backup of hometiles order 

v.1.9.5
- Added support for series recordings (serverWMC only)
- Fixed custom backgrounds for Mediabrowser User library tiles
- Added new skin-setting to order home menu tiles

v.1.9.0
- Added 3D support for MediaBrowser
- Added backgroundservice for artwork on tiles
- Fixed subtitle controls (now native in XBMC)
- Added dynamic loading of content lists
- Added quick access to NextUp items and in progress movies (MB3 only)
- Added settinglevel button in settings screen
- Fixed various graphic and animation issues
- Added progress-indicator in EPG view
- Added MediaBrowser channels and Favorite movies tiles
- Added MusicVideos tiles