@@ -489,7 +489,7 @@
     <include name="SubMenuTabLeft">
         <!--Sub Menu Tab Left-->
         <control type="image">
-            <visible>Control.IsVisible(50) | Control.IsVisible(55) | Control.IsVisible(56)</visible>
+            <visible>Control.IsVisible(50) | Control.IsVisible(55) | Control.IsVisible(56) | Control.IsVisible(52)</visible>
             <include>animation_fade_visible_hidden</include>
             <include>animation_fade_open_close</include>
             <posx>0</posx>
@@ -508,7 +508,7 @@
     <include name="SubMenuTabTop">
         <!--Sub Menu Tab Top-->
         <control type="image">
-            <visible>Control.IsVisible(51) | Control.IsVisible(501) | Control.IsVisible(505) | Control.IsVisible(54) | Control.IsVisible(53) | Control.IsVisible(52) | Control.IsVisible(506)</visible>
+            <visible>Control.IsVisible(51) | Control.IsVisible(501) | Control.IsVisible(505) | Control.IsVisible(54) | Control.IsVisible(53) | Control.IsVisible(506)</visible>
             <include>animation_fade_visible_hidden</include>
             <include>animation_fade_open_close</include>
             <posx>860</posx>
