@@ -8,7 +8,6 @@
     <controls>
         <!-- Video Background -->
         <include>VideoBackground</include>
-		<include>DialogOverlay</include>
         <!--Time & Weather-->
         <include>TimeInfo</include>
         <!--Header-->
