@@ -3,52 +3,105 @@
 <includes>
     <!--Default-->
     <include name="BannerView">
-        <control type="panel" id="501">
-            <include>animation_home</include>
-            <posx>55</posx>
-            <width>1800</width>
-            <height>900</height>
-            <posy>170</posy>
-            <onup>9000</onup>
-            <ondown>noop</ondown>
-            <onleft>501</onleft>
-            <onright>501</onright>
-            <viewtype label="Titan Banner">bigwrap</viewtype>
-            <orientation>horizontal</orientation>
-            <focusposition>-</focusposition>
-            <scrolltime tween="cubic" easing="inout">500</scrolltime>
-            <!-- normal item layout -->
-            <itemlayout width="620" height="380" condition="!Container.Content(Episodes)">
-                <include>BannerViewImagesNormal</include>
-            </itemlayout>
-            <!-- item layout for episodes -->
-            <itemlayout width="450" height="320" condition="Container.Content(Episodes)">
-                <control type="group">
-                    <posy>80</posy>
-                    <include>BannerViewImagesEpisodes</include>
-                </control>
-            </itemlayout>
-            <!-- normal focussed layout -->
-            <focusedlayout width="620" height="380" condition="!Container.Content(Episodes)">
-                <control type="group">
-                    <include>BannerViewImagesNormal</include>
-                    <include>BannerViewOverlayFocusNormal</include>
-                </control>
-            </focusedlayout>
-            <!-- focussed layout for episodes -->
-            <focusedlayout width="450" height="320" condition="Container.Content(Episodes)">
-                <control type="group">
-                    <posy>80</posy>
-                    <include>BannerViewImagesEpisodes</include>
-                    <include>BannerViewOverlayFocusEpisodes</include>
-                </control>
-            </focusedlayout>
-        </control>
-        <!-- footer -->
-        <control type="group">
+		<control type="group">
+			<include>DialogOverlay</include>
+		    <visible>Control.IsVisible(501)</visible>
+            <visible>![Window.IsActive(DialogVideoInfo.xml)]</visible>
+			<control type="panel" id="501">
+				<include>animation_home</include>
+				<posx>55</posx>
+				<width>1800</width>
+				<height>900</height>
+				<posy>170</posy>
+				<onup>9000</onup>
+				<ondown>noop</ondown>
+				<onleft>501</onleft>
+				<onright>501</onright>
+				<pagecontrol>64</pagecontrol>
+				<viewtype label="Titan Banner">bigwrap</viewtype>
+				<orientation>horizontal</orientation>
+				<focusposition>-</focusposition>
+				<scrolltime tween="cubic" easing="inout">500</scrolltime>
+				<!-- normal item layout -->
+				<itemlayout width="620" height="380" condition="!Container.Content(Episodes)">
+					<include>BannerViewImagesNormal</include>
+				</itemlayout>
+				<!-- item layout for episodes -->
+				<itemlayout width="450" height="320" condition="Container.Content(Episodes)">
+					<control type="group">
+						<posy>80</posy>
+						<include>BannerViewImagesEpisodes</include>
+					</control>
+				</itemlayout>
+				<!-- normal focussed layout -->
+				<focusedlayout width="620" height="380" condition="!Container.Content(Episodes)">
+					<control type="group">
+						<include>BannerViewImagesNormal</include>
+						<include>BannerViewOverlayFocusNormal</include>
+					</control>
+				</focusedlayout>
+				<!-- focussed layout for episodes -->
+				<focusedlayout width="450" height="320" condition="Container.Content(Episodes)">
+					<control type="group">
+						<posy>80</posy>
+						<include>BannerViewImagesEpisodes</include>
+						<include>BannerViewOverlayFocusEpisodes</include>
+					</control>
+				</focusedlayout>
+			</control>
+			<!-- footer -->
+			<control type="group">
+				<visible>Control.IsVisible(501)</visible>
+				<visible>!Window.IsActive(DialogVideoInfo.xml)</visible>
+				<include>ViewsFooter</include>
+			</control>
+			<!--Scollbar-->
+			<control type="group">
             <visible>Control.IsVisible(501)</visible>
-            <visible>!Window.IsActive(DialogVideoInfo.xml)</visible>
-            <include>ViewsFooter</include>
+            <visible>![Window.IsActive(DialogVideoInfo.xml)]</visible>
+            <visible>IntegerGreaterThan(Container(501).NumItems,30)</visible>
+            <visible>!Container.Content(songs)</visible>
+            <control type="scrollbar" id="64">
+                <!--Scrollbar ID60-->
+                <visible>IntegerGreaterThan(Container(501).NumItems,30)</visible>
+                <visible>!Container.Content(songs)</visible>
+                <posx>60</posx>
+				<width>1800</width>
+                <posy>1040</posy>
+                <height>15</height>
+                <onup>501</onup>
+                <onright>noop</onright>
+				<orientation>horizontal</orientation>
+                <visible allowhiddenfocus="true">Control.HasFocus(64) | Container.Scrolling</visible>
+                <animation effect="fade" start="0" end="100" time="400" condition="Control.HasFocus(64) | Container.Scrolling">Conditional</animation>
+            </control>
+            <control type="image">
+                <!--Scrolling Letter Background-->
+                <visible>Container(501).Scrolling</visible>
+                <posx>910</posx>
+                <posy>490</posy>
+                <width>100</width>
+                <height>100</height>
+                <texture>common/scrollbar-letter.png</texture>
+                <animation effect="fade" start="0" end="100" time="400" delay="30">Visible</animation>
+                <animation effect="fade" start="100" end="0" time="400" delay="150">Hidden</animation>
+            </control>
+            <control type="label">
+                <!--Scrolling Letter-->
+                <visible>Container(501).Scrolling</visible>
+                <posx>910</posx>
+                <posy>490</posy>
+                <width>100</width>
+                <height>100</height>
+                <align>center</align>
+                <aligny>center</aligny>
+                <font>Bold38</font>
+                <textcolor>mainblue</textcolor>
+                <label>$INFO[ListItem.SortLetter]</label>
+                <animation effect="fade" start="0" end="100" time="400" delay="30">Visible</animation>
+                <animation effect="fade" start="100" end="0" time="400" delay="150">Hidden</animation>
+            </control>
         </control>
-    </include>
+		</control>
+	</include>
 </includes>
