@@ -19,6 +19,7 @@
             <ondown>noop</ondown>
             <onleft>505</onleft>
             <onright>505</onright>
+			<pagecontrol>65</pagecontrol>
             <orientation>horizontal</orientation>
             <focusposition>-</focusposition>
             <viewtype label="Titan Banner details">wide</viewtype>
@@ -49,6 +50,53 @@
                     <include>BannerViewOverlayFocusEpisodes</include>
                 </control>
             </focusedlayout>
+        </control>
+		<!--Scollbar-->
+        <control type="group">
+            <visible>Control.IsVisible(505)</visible>
+            <visible>![Window.IsActive(DialogVideoInfo.xml)]</visible>
+            <visible>IntegerGreaterThan(Container(505).NumItems,30)</visible>
+            <visible>!Container.Content(songs)</visible>
+            <control type="scrollbar" id="65">
+                <!--Scrollbar ID60-->
+                <visible>IntegerGreaterThan(Container(505).NumItems,30)</visible>
+                <visible>!Container.Content(songs)</visible>
+                <posx>60</posx>
+				<width>1800</width>
+                <posy>1040</posy>
+                <height>15</height>
+                <onup>505</onup>
+                <onright>noop</onright>
+				<orientation>horizontal</orientation>
+                <visible allowhiddenfocus="true">Control.HasFocus(65) | Container.Scrolling</visible>
+                <animation effect="fade" start="0" end="100" time="400" condition="Control.HasFocus(65) | Container.Scrolling">Conditional</animation>
+            </control>
+            <control type="image">
+                <!--Scrolling Letter Background-->
+                <visible>Container(505).Scrolling</visible>
+                <posx>910</posx>
+                <posy>490</posy>
+                <width>100</width>
+                <height>100</height>
+                <texture>common/scrollbar-letter.png</texture>
+                <animation effect="fade" start="0" end="100" time="400" delay="30">Visible</animation>
+                <animation effect="fade" start="100" end="0" time="400" delay="150">Hidden</animation>
+            </control>
+            <control type="label">
+                <!--Scrolling Letter-->
+                <visible>Container(505).Scrolling</visible>
+                <posx>910</posx>
+                <posy>490</posy>
+                <width>100</width>
+                <height>100</height>
+                <align>center</align>
+                <aligny>center</aligny>
+                <font>Bold38</font>
+                <textcolor>mainblue</textcolor>
+                <label>$INFO[ListItem.SortLetter]</label>
+                <animation effect="fade" start="0" end="100" time="400" delay="30">Visible</animation>
+                <animation effect="fade" start="100" end="0" time="400" delay="150">Hidden</animation>
+            </control>
         </control>
     </include>
 </includes>
