@@ -237,23 +237,55 @@
 				</focusedlayout>
 
 			</control>
-			
-			<!--Scrollbar -->
-			<control type="scrollbar" id="63">
-				<posx>0</posx>
-				<width>1850</width>
-				<height>5</height>
-				<texturesliderbackground>-</texturesliderbackground>
-				<texturesliderbar>colors/color_lightgrey.png</texturesliderbar>
-				<texturesliderbarfocus>colors/color_white.png</texturesliderbarfocus>
-				<orientation>horizontal</orientation>
-				<showonepage>false</showonepage>
-				<posy>880</posy>
-				<animation effect="fade" start="100" end="20" time="200" reversible="true" condition="!Container(506).Scrolling">Conditional</animation>
-				
-			</control>
-		
 		</control>
+		
+		<!--Scollbar-->
+        <control type="group">
+            <visible>Control.IsVisible(506)</visible>
+            <visible>![Window.IsActive(DialogVideoInfo.xml)]</visible>
+            <visible>IntegerGreaterThan(Container(506).NumItems,30)</visible>
+            <visible>!Container.Content(songs)</visible>
+            <control type="scrollbar" id="63">
+                <!--Scrollbar ID60-->
+                <visible>IntegerGreaterThan(Container(506).NumItems,30)</visible>
+                <visible>!Container.Content(songs)</visible>
+                <posx>60</posx>
+				<width>1800</width>
+                <posy>1040</posy>
+                <height>15</height>
+                <onup>506</onup>
+                <onright>noop</onright>
+				<orientation>horizontal</orientation>
+                <visible allowhiddenfocus="true">Control.HasFocus(63) | Container.Scrolling</visible>
+                <animation effect="fade" start="0" end="100" time="400" condition="Control.HasFocus(63) | Container.Scrolling">Conditional</animation>
+            </control>
+            <control type="image">
+                <!--Scrolling Letter Background-->
+                <visible>Container(506).Scrolling</visible>
+                <posx>910</posx>
+                <posy>490</posy>
+                <width>100</width>
+                <height>100</height>
+                <texture>common/scrollbar-letter.png</texture>
+                <animation effect="fade" start="0" end="100" time="400" delay="30">Visible</animation>
+                <animation effect="fade" start="100" end="0" time="400" delay="150">Hidden</animation>
+            </control>
+            <control type="label">
+                <!--Scrolling Letter-->
+                <visible>Container(506).Scrolling</visible>
+                <posx>910</posx>
+                <posy>490</posy>
+                <width>100</width>
+                <height>100</height>
+                <align>center</align>
+                <aligny>center</aligny>
+                <font>Bold38</font>
+                <textcolor>mainblue</textcolor>
+                <label>$INFO[ListItem.SortLetter]</label>
+                <animation effect="fade" start="0" end="100" time="400" delay="30">Visible</animation>
+                <animation effect="fade" start="100" end="0" time="400" delay="150">Hidden</animation>
+            </control>
+        </control>
 		
 	</include>
 
