@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
 	id="skin.titan"
-	version="2.0.6"
+	version="2.0.7"
 	name="Titan MediaBrowser"
-	provider-name="marcelveldt, reazorFX">
+	provider-name="marcelveldt">
 	<requires>
 		<import version="5.0.1" addon="xbmc.gui"/>		
 		<import addon="script.artwork.downloader" version="12.0.29" />
@@ -27,6 +27,6 @@
 		<forum>http://forum.xbmc.org/showthread.php?tid=201061</forum>
 		<website></website>
 		<email></email>
-		<source>https://www.assembla.com/code/xbmc-skin-titan/subversion/nodes/32/trunk/skin.titan</source>
+		<source></source>
 	</extension>
 </addon>
